# MazeAI

./: .gitignore  README.md  execution_benchmark.csv  execution_data.csv  execution_log.csv  execution_log.csv.benchmark  pyproject.toml
src/: App.py  main.py  test.py
src/algorithms/: MazeGenerator.py  MazeSolver.py  UnionFind.py
src/grid/: Cell.py  Grid.py  Renderer.py
src/utils/: Direction.py  Profiler.py  constants.py
tests/: __init__.py
tests/grid/: test_cell.py  test_grid.py
tests/utils/: test_direction.py
